# spw-test-device

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Logger.cpp  Logger.hpp  Package.cpp  Package.hpp  RMAPConstants.hpp  Shell.cpp  Shell.hpp  Socket.cpp  Socket.hpp  TestingModule.cpp  TestingModule.hpp  main.cpp
tests/: CMakeLists.txt  CRCTests.cpp  PackageTests.cpp  main.cpp
